fix(files): ui style compatibility fixing on firefox and safari browser
This commit fixed following problem:
1. When using "flex: 1;" to show files list, safari will force left lines to fill containers,
if lines of files are greater than 1 (e.g 2 lines or 3 lines). Now we removed "flex" in class
"overview-group-items".
2. On firefox, padding bottom does not take effect for "Pane" of file list. Now we use
margin-bottom instead.

--- a/src/components/file_trans.less
+++ b/src/components/file_trans.less
@@ -1,3 +1,7 @@
+.path-nav {
+  overflow-x: scroll;
+}
+
 .overview-item {
   background-color:#F9F9FB;
   color: #425A70;
@@ -44,7 +48,6 @@
 }
 
 .overview-group-items {
-    flex: 1;
     display: inline-grid;
     grid-template-columns: repeat(auto-fill, 90px);
     // grid-template-columns: repeat(auto-fill, 10px);
